Replace Painterly Look Test with Animated Short Look Test
Updated the video card section to replace 'Painterly Look Test' with 'Animated Short Look Test' and modified the description accordingly.

--- a/index.html
+++ b/index.html
@@ -335,28 +335,76 @@
       </details>
     </section>
     <!-- VIDEO CARD 5 -->
-    <section class="content video-card" aria-label="Painterly Look Test">
-      <h2 class="h1">Painterly Look Test</h2>
+    <section class="content video-card" aria-label="Animated Short Look Test">
+      <h2 class="h1">Animated Short Look Test</h2>
       <div class="video">
         <iframe
           src="https://player.vimeo.com/video/394362759?title=0&byline=0&portrait=0"
           allow="autoplay; fullscreen; picture-in-picture"
           style="position:absolute;top:0;left:0;width:100%;height:100%;"
-          title="Painterly Look Test">
+          title="Animated Short Look Test">
         </iframe>
       </div>
       <details class="accordion">
-        <summary><span class="caret">▶</span> Test Description</summary>
-        <div class="accordion-inner">
-          <p>
-            <p>This look test was created for a short film I was directing at DreamWorks, exploring the visual style and character rendering. Special thanks to the talented artists who brought this to life:</p>
+        <summary><span class="caret">▶</span> Look Test Description</summary>
+          <div class="accordion-inner">
+          <div class="section">
+            <p> While at Dreamworks Animation, I had a once in a lifetime opportunity to direct a short that was very close to my heart. One day I hope to have the skillset to finish this project. I do want to celebrate the people who were such a blessing to work with. This look test was created for the short film, exploring the visual style and character rendering. Special thanks to the talented artists who brought this to life:</p>
             <p>Modeling: Hyun Huh</p>
-            <p>LookDev & FX: Yancy Lindquist</p>
-          </p>
+            <p>LookDev &amp; FX: Yancy Lindquist</p>
+          </div>
+
+          <div class="section" aria-label="Quigley Gallery">
+            <div style="display:flex; flex-direction:column; gap:20px; margin-top:10px;">
+              <img src="quigley_title_card.jpg" alt="Quigley Title Card" style="width:100%; border-radius:12px;" />
+              <p> Title Card by Ramone Zibach </p>
+              <img src="quigley_RB.jpg" alt="Quigley Character Sketch" style="width:100%; border-radius:12px;" />
+              <p> Line art by Rune Bennicke </p>
+              <img src="quigley_BW.jpg" alt="Quigley Painting Scene" style="width:100%; border-radius:12px;" />
+              <p> Painting by Brian Wang </p>
+            </div>
+          </div>
+
+          <div class="section" aria-label="Quigley Credits">
+            <h3>Credits</h3>
+            <p>All amazing people that I can’t believe I had the once-in-a-lifetime opportunity to work with:</p>
+            <ul style="columns: 2; margin: 0; padding-left: 20px;">
+              <li>Jeffrey Hermann</li>
+              <li>Jennifer Howell</li>
+              <li>Chris deFaria</li>
+              <li>Jon Schmidt</li>
+              <li>Matthew Tucker</li>
+              <li>Raymond Zibach</li>
+              <li>Hamish Grieve</li>
+              <li>Brian Wang</li>
+              <li>Brendan Murphy</li>
+              <li>Kirsten Kawamura</li>
+              <li>Rune Bennicke</li>
+              <li>Patrick Walsh</li>
+              <li>Matt Baer</li>
+              <li>Jeff Budsberg</li>
+              <li>Jill Hopper</li>
+              <li>Joe Moshier</li>
+              <li>Chris Meinen</li>
+              <li>Andy Erekson</li>
+              <li>Bill Otsuka</li>
+              <li>Hyun Huh</li>
+              <li>Stan Seo</li>
+              <li>Yancy Lindquist</li>
+              <li>CK Horness</li>
+              <li>James Ryan</li>
+              <li>Mark Fitzgerald</li>
+              <li>Jay Bixsen</li>
+              <li>Sean Choi</li>
+              <li>Orlando Duenas</li>
+              <li>Arin Mathern</li>
+              <li>Meghan Shearer</li>
+              <li>Damon Obeirne</li>
+            </ul>
+          </div>
         </div>
       </details>
-    </section>
-    <!-- VIDEO CARD 6 -->
+    </section>    <!-- VIDEO CARD 6 -->
     <section class="content video-card" aria-label="Bad Guys Rigging Lead Showreel">
       <h2 class="h1">Bad Guys Rigging Lead Showreel</h2>
       <div class="video">
