--- a/index.html
+++ b/index.html
@@ -355,13 +355,15 @@
           </div>
 
           <div class="section" aria-label="Quigley Gallery">
-            <div style="display:flex; flex-direction:column; gap:20px; margin-top:10px;">
-              <img src="quigley_title_card.jpg" alt="Quigley Title Card" style="width:100%; border-radius:12px;" />
-              <p> Title Card by Ramone Zibach </p>
-              <img src="quigley_RB.jpg" alt="Quigley Character Sketch" style="width:100%; border-radius:12px;" />
-              <p> Line art by Rune Bennicke </p>
-              <img src="quigley_BW.jpg" alt="Quigley Painting Scene" style="width:100%; border-radius:12px;" />
-              <p> Painting by Brian Wang </p>
+            <div style="display:flex; flex-direction:column; gap:10px; margin-top:5px;">
+              <img src="quigley_title_card.jpg" alt="Quigley Title Card" style="width:50%; border-radius:6px;" />
+              <p> By Ramone Zibach </p>
+              <img src="quigley_RB.jpg" alt="Initial Character Exploration" style="width:50%; border-radius:6px;" />
+              <p> By Rune Bennicke </p>
+              <img src="quigley_BW.jpg" alt="Quigley Painting Scene" style="width:50%; border-radius:6px;" />
+              <p> By Brian Wang </p>
+              <img src="quigley_JM.jpg" alt="Final Character Exploration" style="width:50%; border-radius:6px;" />
+              <p> By Joe Moshier </p>
             </div>
           </div>
 
